--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,15 +9,17 @@ services:
     ports:
       - 8000:8000
     env_file:
-      - ./.env.dev
-  db:
-    image: postgres:13.0-alpine
+      - ./app/.env.dev
+    depends_on:
+      - web-db
+  web-db:
+    image: postgres:14.0-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     environment:
-      - POSTGRES_USER=hello_django
-      - POSTGRES_PASSWORD=hello_django
-      - POSTGRES_DB=hello_django_dev
+      - POSTGRES_USER=ecom_crypto
+      - POSTGRES_PASSWORD=ecom_crypto
+      - POSTGRES_DB=ecom_crypto_dev
 
 volumes:
   postgres_data:
