--- a/app/Pipfile
+++ b/app/Pipfile
@@ -4,6 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+gunicorn = "==20.1.0"
+psycopg2-binary = "==2.9.2"
+coinbase-commerce = "*"
+Django = "==3.2.9"
 
 [dev-packages]
 
