--- a/app/Dockerfile.prod
+++ b/app/Dockerfile.prod
@@ -14,7 +14,7 @@ ENV PYTHONUNBUFFERED 1
 
 # install system dependencies
 RUN apt-get update \
-  && apt-get -y install gcc postgresql \
+  && apt-get -y install gcc \
   && apt-get clean
 
 # install dependencies
@@ -22,12 +22,12 @@ RUN pip install --upgrade pip
 COPY ./requirements.txt .
 RUN pip wheel --no-cache-dir --no-deps --wheel-dir /usr/src/app/wheels -r requirements.txt
 
-# lint
-COPY . .
-RUN pip install black==21.12b0 flake8==4.0.1 isort==5.10.1
-RUN flake8 .
-RUN black . --check --exclude=migrations
-RUN isort . --check-only
+# # lint
+# COPY . .
+# RUN pip install black==21.12b0 flake8==4.0.1 isort==5.10.1
+# RUN flake8 .
+# RUN black . --check --exclude=migrations
+# RUN isort . --check-only
 
 
 #########
@@ -47,10 +47,12 @@ ENV DEBUG 0
 ARG SECRET_KEY
 ENV SECRET_KEY $SECRET_KEY
 ENV DJANGO_ALLOWED_HOSTS .herokuapp.com
+ARG PORT
+ENV PORT $PORT
 
 # install system dependencies
 RUN apt-get update \
-  && apt-get -y install gcc postgresql \
+  && apt-get -y install gcc \
   && apt-get clean
 
 # install dependencies
