--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,7 +21,9 @@ jobs:
             NODE_ENV
             SECRET_KEY
             PORT
+            COINBASE_COMMERCE_API_KEY
         env:
           NODE_ENV: production
           SECRET_KEY: ${{ secrets.MY_SECRET_KEY }}
           PORT: ${{ secrets.DJANGO_APP_PORT }}
+          COINBASE_COMMERCE_API_KEY: ${{ secrets.COINBASE_COMMERCE_API_KEY }}
