--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,8 +22,10 @@ jobs:
             SECRET_KEY
             PORT
             COINBASE_COMMERCE_API_KEY
+            DJANGO_ALLOWED_HOSTS
         env:
           NODE_ENV: production
           SECRET_KEY: ${{ secrets.MY_SECRET_KEY }}
           PORT: ${{ secrets.DJANGO_APP_PORT }}
           COINBASE_COMMERCE_API_KEY: ${{ secrets.COINBASE_COMMERCE_API_KEY }}
+          DJANGO_ALLOWED_HOSTS: ${{ secrets.DJANGO_ALLOWED_HOSTS }}
