--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -76,4 +76,4 @@ RUN adduser --disabled-password myuser
 USER myuser
 
 # run gunicorn
-CMD gunicorn core.wsgi:application --bind 0.0.0.0:8000
+CMD gunicorn core.wsgi:application --bind 0.0.0.0:$PORT
