--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -43,7 +43,7 @@ WORKDIR /usr/src/app
 # set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
-ENV DEBUG 0
+ENV DEBUG False
 ARG SECRET_KEY
 ENV SECRET_KEY $SECRET_KEY
 ENV DJANGO_ALLOWED_HOSTS .herokuapp.com
