--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,14 +18,13 @@ jobs:
           usedocker: true
           appdir: app 
           docker_build_args: |
-            NODE_ENV
+            DEBUG
             SECRET_KEY
             PORT
             COINBASE_COMMERCE_API_KEY
-            DJANGO_ALLOWED_HOSTS
         env:
-          NODE_ENV: production
+          DEBUG: ${{ secrets.DEBUG }}
           SECRET_KEY: ${{ secrets.MY_SECRET_KEY }}
           PORT: ${{ secrets.DJANGO_APP_PORT }}
           COINBASE_COMMERCE_API_KEY: ${{ secrets.COINBASE_COMMERCE_API_KEY }}
-          DJANGO_ALLOWED_HOSTS: ${{ secrets.DJANGO_ALLOWED_HOSTS }}
+          # DJANGO_ALLOWED_HOSTS: ${{ secrets.DJANGO_ALLOWED_HOSTS }}
