--- a/.gitignore
+++ b/.gitignore
@@ -129,8 +129,7 @@ dmypy.json
 .pyre/
 
 # local config
-configlocal.py
-settingslocal.py
-.env.dev
-.env.prod
-.env.prod.db
+__pycache__
+*.pyc
+env.dev
+db.sqlite3
