--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -43,15 +43,9 @@ WORKDIR /usr/src/app
 # set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
-ENV DEBUG False
-ARG SECRET_KEY
-ENV SECRET_KEY $SECRET_KEY
-ARG PORT
+ENV DEBUG $DEBUG
+ENV COINBASE_API_KEY $COINBASE_API_KEY
 ENV PORT $PORT
-ARG COINBASE_COMMERCE_API_KEY
-ENV COINBASE_COMMERCE_API_KEY $COINBASE_COMMERCE_API_KEY
-# ARG DJANGO_ALLOWED_HOSTS
-# ENV DJANGO_ALLOWED_HOSTS $DJANGO_ALLOWED_HOSTS
 
 # install system dependencies
 RUN apt-get update \
