--- a/app/Pipfile
+++ b/app/Pipfile
@@ -5,7 +5,9 @@ name = "pypi"
 
 [packages]
 gunicorn = "==20.1.0"
-coinbase-commerce = "*"
+coinbase-commerce = "==1.0.1"
+whitenoise = "==5.3.0"
+django-environ-2 = "==2.3.0"
 Django = "==3.2.10"
 
 [dev-packages]
