added: new logic to heroku deploy via GitHub actions

--- a/.github/workflows/docker_build_push_deploy.yml
+++ b/.github/workflows/docker_build_push_deploy.yml
@@ -12,11 +12,14 @@ on:
 
 env:
   IMAGE_NAME: ecrypto
+  HEROKU_API_KEY: ${{secrets.HEROKU_API_KEY}}
+  HEROKU_APP_NAME: ${{secrets..HEROKU_APP_NAME}}
+  HEROKU_REGISTRY_IMAGE: registry.heroku.com/${HEROKU_APP_NAME}/web
 
 jobs:
   # Push image to GitHub Packages.
   # See also https://docs.docker.com/docker-hub/builds/
-  push:
+  build:
     runs-on: ubuntu-latest
     permissions:
       packages: write
@@ -28,6 +31,7 @@ jobs:
       - name: Build image
         run: |
           cd ./app
+          docker pull $IMAGE:latest || true
           docker build . --file Dockerfile --tag $IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}"
 
       - name: Log in to registry
@@ -54,3 +58,17 @@ jobs:
           echo VERSION=$VERSION
           docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
           docker push $IMAGE_ID:$VERSION
+
+      - name: Deploy image
+        run: |
+          cd ./app
+          docker login -u _ -p $HEROKU_API_KEY registry.heroku.com
+          docker pull $HEROKU_REGISTRY_IMAGE || true
+          docker build
+            --cache-from $HEROKU_REGISTRY_IMAGE
+            --tag $HEROKU_REGISTRY_IMAGE
+            --file ./Dockerfile
+            "."
+          docker push $HEROKU_REGISTRY_IMAGE
+          chmod +x ./heroku_release.sh
+          ./heroku_release.sh
