fix: docker build syntax 2

--- a/.github/workflows/docker_build_push_deploy.yml
+++ b/.github/workflows/docker_build_push_deploy.yml
@@ -64,9 +64,9 @@ jobs:
           cd ./app
           docker login -u _ -p $HEROKU_API_KEY registry.heroku.com
           docker pull $HEROKU_REGISTRY_IMAGE || true
-          docker build .
-            --cache-from $HEROKU_REGISTRY_IMAGE
-            --tag $HEROKU_REGISTRY_IMAGE
+          docker build . \
+            --cache-from $HEROKU_REGISTRY_IMAGE \
+            --tag $HEROKU_REGISTRY_IMAGE \
             --file ./Dockerfile
           docker push $HEROKU_REGISTRY_IMAGE
           chmod +x ./heroku_release.sh
