--- a/.github/workflows/docker_build_push_deploy.yml
+++ b/.github/workflows/docker_build_push_deploy.yml
@@ -13,7 +13,7 @@ on:
 env:
   IMAGE_NAME: ecrypto
   HEROKU_API_KEY: ${{secrets.HEROKU_API_KEY}}
-  HEROKU_APP_NAME: ${{secrets..HEROKU_APP_NAME}}
+  HEROKU_APP_NAME: ${{secrets.HEROKU_APP_NAME}}
   HEROKU_REGISTRY_IMAGE: registry.heroku.com/${HEROKU_APP_NAME}/web
 
 jobs:
@@ -64,7 +64,7 @@ jobs:
           cd ./app
           docker login -u _ -p $HEROKU_API_KEY registry.heroku.com
           docker pull $HEROKU_REGISTRY_IMAGE || true
-          docker build --cache-from $HEROKU_REGISTRY_IMAGE --tag $HEROKU_REGISTRY_IMAGE --file ./Dockerfile
+          docker build . --cache-from $HEROKU_REGISTRY_IMAGE --tag $HEROKU_REGISTRY_IMAGE --file ./Dockerfile
           docker push $HEROKU_REGISTRY_IMAGE
           chmod +x ./heroku_release.sh
           ./heroku_release.sh
