--- a/.github/workflows/docker_build_push_deploy.yml
+++ b/.github/workflows/docker_build_push_deploy.yml
@@ -14,7 +14,7 @@ env:
   IMAGE_NAME: ecrypto
   HEROKU_API_KEY: ${{secrets.HEROKU_API_KEY}}
   HEROKU_APP_NAME: ${{secrets.HEROKU_APP_NAME}}
-  HEROKU_REGISTRY_IMAGE: registry.heroku.com/${HEROKU_APP_NAME}/web
+  HEROKU_REGISTRY_IMAGE: registry.heroku.com/$HEROKU_APP_NAME/web
 
 jobs:
   # Push image to GitHub Packages.
@@ -59,6 +59,14 @@ jobs:
           docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
           docker push $IMAGE_ID:$VERSION
 
+  deploy:
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
+
+    steps:
+      - uses: actions/checkout@v2
       - name: Deploy image
         run: |
           cd ./app
