--- a/.github/workflows/docker_build_push_deploy.yml
+++ b/.github/workflows/docker_build_push_deploy.yml
@@ -13,8 +13,7 @@ on:
 env:
   IMAGE_NAME: ecrypto
   HEROKU_API_KEY: ${{secrets.HEROKU_API_KEY}}
-  HEROKU_APP_NAME: ${{secrets.HEROKU_APP_NAME}}
-  HEROKU_REGISTRY_IMAGE: registry.heroku.com/$HEROKU_APP_NAME/web
+  HEROKU_REGISTRY_IMAGE: registry.heroku.com/${{secrets.HEROKU_APP_NAME}}/web
 
 jobs:
   # Push image to GitHub Packages.
