--- a/.github/workflows/heroku_deploy.yml
+++ b/.github/workflows/heroku_deploy.yml
@@ -8,6 +8,7 @@ on:
 
 env:
   HEROKU_API_KEY: ${{secrets.HEROKU_API_KEY}}
+  HEROKU_APP_NAME: ${{secrets.HEROKU_APP_NAME}}
   HEROKU_REGISTRY_IMAGE: registry.heroku.com/${{secrets.HEROKU_APP_NAME}}/web
 
 jobs:
